# tuix

./: Cargo.toml  README.md
src/: app.rs  event.rs  handler.rs  help.rs  lib.rs  main.rs  notification.rs  tui.rs  ui.rs  xrandr.rs
