[package]
name = "tuix"
version = "0.1.0"
authors = ["Badr Badri <contact@pythops.com>"]
license = "GPL-3.0"
edition = "2021"
description = "TUI for managing screens"
readme = "Readme.md"
homepage = "https://github.com/pythops/tuix"
repository = "https://github.com/pythops/tuix"

[dependencies]
ratatui = "0.27"
regex = "1"

[profile.release]
strip = true
